--- a/src/styles/AboutChillGuy.css
+++ b/src/styles/AboutChillGuy.css
@@ -67,7 +67,7 @@
     height: 220px;
     margin: 0 auto;
     border-radius: 50%;
-    background-image: url('../assets/chill_guy.png');
+    background-image: url('../assets/chill.png');
     background-size:contain;
     background-position: center;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
